# FreeCAD

./: .gitignore  CMakeLists.txt  package-lock.json  package.json  pixi.toml  run_freecad_debug.bat
scripts/: start-llm-integration.bat  start-llm-integration.sh
sidecar/: .env.groq  .env.lmstudio  .env.ollama  README.md  package-lock.json  package.json
sidecar/docs/: ARCHITECTURE.md  BUGFIXES.md
sidecar/src/: agent-backend.ts  agent-tools.ts  backend-config.ts  backend-registry.ts  claude-code-process.ts  context-injector.ts  dock-server.ts  file-utils.ts  fix-backticks.js  freecad-bridge.ts  index.ts  mcp-stdio-server.ts  result-formatters.ts  session-manager.ts  tool-translator.ts  types.ts
sidecar/src/backends/: azure-openai-backend.ts  claude-ai-backend.ts  claude-backend.ts  gemini-ai-backend.ts  openai-compatible-backend.ts  opencode-backend.ts  vercel-ai-backend-base.ts  vercel-ai-backend.ts
sidecar/test/: utils.ts
sidecar/test/backend/: azure-backend.test.ts  backend-parity.test.ts  backend-tester.ts  gemini-backend.test.ts  minimax-backend.test.ts  openai-compatible-backend.test.ts  send-message-integration.test.ts  tool-code-generation.test.ts  tool-coverage.test.ts
skills/: COMMIT_HISTORY.md  CURRENT_PLAN.md  CURRENT_REVIEW.md  CYCLE_COUNT.md  INTEGRATION_GUIDE.md  PROJECT.md  code-review.md  implement.md  incremental-commits.md  mastermind.md  plan.md
src/Gui/: Application.cpp  CMakeLists.txt  LLMChatWidget.cpp  LLMChatWidget.h  LLMDockWidget.cpp  LLMDockWidget.h  MainWindow.cpp  MainWindow.h
src/Mod/: CMakeLists.txt
src/Mod/LLMBridge/: CMakeLists.txt  Init.py  InitGui.py
src/Mod/LLMBridge/llm_bridge/: __init__.py  animation_export_handlers.py  assembly_handlers.py  bim_handlers.py  boolean_handlers.py  draft_handlers.py  error_handlers.py  executor.py  fea_handlers.py  feature_handlers.py  file_handlers.py  kinematic_handlers.py  llm_panel_bridge.py  main_thread.py  measurement_handlers.py  mesh_export_handlers.py  mesh_handlers.py  path_handlers.py  pattern_handlers.py  property_handlers.py  query_handlers.py  render_handlers.py  server.py  sidecar_client.py  sketcher_handlers.py  spreadsheet_handlers.py  surface_handlers.py  techdraw_handlers.py  workflow_handlers.py
